# rp

./: .pre-commit-config.yaml  CLAUDE.md  ISSUES.md  README.md  TIMESTAMP  docs.md  pyproject.toml
.github/workflows/: e2e-freshness.yml  e2e.yml  unit.yml  version-bump.yml
assets/: default_setup.sh
docs/superpowers/plans/: 2026-05-12-session-scoping-and-persistent-pods.md
docs/superpowers/specs/: 2026-05-12-session-scoping-and-persistent-pods-design.md
scripts/: sweep_test_pods.py
src/rp/: config.py  main.py  ssh_config.py
src/rp/assets/: auto_shutdown.sh  default_setup.sh
src/rp/cli/: commands.py  utils.py
src/rp/core/: claude_remote.py  default_templates.py  models.py  pod_manager.py  pod_setup.py  secret_manager.py  session.py  settings.py  ssh_manager.py  version_check.py
src/rp/utils/: api_client.py  errors.py
tests/: conftest.py
tests/e2e/: test_pod_lifecycle.py  test_pod_notes.py  test_primary_flows.py  test_session_scoping.py  test_stop_not_destroy.py
tests/unit/: test_auto_shutdown_script.py  test_config.py  test_default_templates.py  test_down_command.py  test_models.py  test_packaging.py  test_pod_display.py  test_pod_manager.py  test_pod_manager_lifecycle.py  test_pod_metadata.py  test_pod_notes.py  test_pod_setup.py  test_pod_setup_script.py  test_remote_commands.py  test_session.py  test_session_scoping.py  test_settings.py  test_stale_warnings.py  test_start_command.py  test_storage_flags.py  test_version_check.py
